Issue #466 Editing fixing layout on small screen

--- a/tutor/app/assets/stylesheets/application.css
+++ b/tutor/app/assets/stylesheets/application.css
@@ -55,3 +55,6 @@
 .home {
 	overflow:auto;
 }
+.well {
+	background: transparent;
+}
